--- a/school-managment/school-managment/src/main/resources/application.properties
+++ b/school-managment/school-managment/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=school-managment
 spring.datasource.url=jdbc:mysql://localhost:3306/school_db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Aalperentanir1771
+spring.datasource.password=YOUR MYSQL ACCOUNT PASSWORD
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
